Fix partner logos on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,12 @@ html {
 body {
   margin: 0;
 }
+
+body,
+html {
+  height: 100%;
+}
+
 article,
 aside,
 details,
@@ -4362,5 +4368,16 @@ i.bi {
   .team-portrait img {
     width: 100%;
     height: 100%;
+  }
+
+  .container {
+    .slider-new {
+      animation: none;
+      .logos {
+        display: grid;
+        grid-template-columns: repeat(2, 49%);
+        grid-gap: 2%;
+      }
+    }
   }
 }
